--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "homepage": "https://ionicframework.com/",
     "scripts": {
         "start": "ng serve",
-        "start:mobile": "ionic cordova run android --device",
+        "start:mobile": "ionic cordova run android -l -c -s --debug",
         "build": "ionic build",
         "build:mobile": "ionic cordova build android --prod"
     },
@@ -20,10 +20,12 @@
         "@capacitor/android": "^2.3.0",
         "@capacitor/core": "2.3.0",
         "@ionic-native/core": "^5.0.7",
+        "@ionic-native/image-picker": "^5.27.0",
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^5.0.0",
         "cordova-android": "8.1.0",
+        "cordova-plugin-telerik-imagepicker": "^2.3.3",
         "rxjs": "~6.5.1",
         "tslib": "^1.10.0",
         "xlsx": "^0.16.4",
@@ -69,7 +71,8 @@
             "cordova-plugin-ionic-webview": {
                 "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
             },
-            "cordova-plugin-ionic-keyboard": {}
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-telerik-imagepicker": {}
         },
         "platforms": [
             "android"
