--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^5.0.0",
         "cordova-android": "8.1.0",
+        "cordova-plugin-nativestorage": "^2.3.2",
         "cordova-plugin-telerik-imagepicker": "^2.3.3",
         "rxjs": "~6.5.1",
         "tslib": "^1.10.0",
